# CFD-Solver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  makefile
src/: main.c
